<resources>
    <!--General-->
    <string name="app_name">AudioMixer</string>
    <string name="nothing_found_error">No files found in directory…</string>
    <string name="loading">Loading…</string>

    <!--MainActivity strings-->
    <string name="settings_button">Settings page</string>
    <string name="pause_button">Pause</string>
    <string name="skip_next_button">Skip to next song</string>
    <string name="skip_previous_button">Skip to previous song</string>
    <string name="loop_text">1</string>
    <string name="queue_button">Show or hide queue</string>

    <!--Settings page strings-->
    <string name="settings_general_h">General</string>
    <string name="settings_theme">Select theme:</string>
    <string-array name="theme_options">
        <item>System default</item>
        <item>Light mode</item>
        <item>Dark mode</item>
    </string-array>
    <string name="settings_color">Select accent color:</string>
    <string-array name="color_options">
        <item>Default</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Orange</item>
        <item>Purple</item>
        <item>Pink</item>
    </string-array>
    <string-array name="launch_options">
        <item>Music</item>
        <item>Home</item>
        <item>Ambience</item>
    </string-array>
    <string name="settings_disk">Rotate ambient disk:</string>
    <string name="settings_launch_tab">Tab to launch with:</string>

    <string name="settings_audio_h">Audio</string>
    <string name="settings_scan_songs">Scan all files for songs:</string>"
    <string name="settings_song_path">Music directory:</string>
    <string name="settings_ambient_path">Add ambient directory:</string>
    <string name="settings_path_button">Path</string>

    <string name="settings_reset_button">Reset settings to default</string>

    <!--Home fragment strings-->
    <string name="song_volume_label">SONG VOLUME</string>
    <string name="ambient_volume_label">AMBIENT VOLUME</string>
    <string name="default_volume">0</string>
    <string name="sleep_timer_button">Sleep Timers</string>

    <!--Song fragment strings-->
    <string name="path_indicator">Path:</string>
    <string-array name="sort_options">
        <item>Added</item>
        <item>Title</item>
        <item>Artist</item>
        <item>Album</item>
        <item>Duration</item>
    </string-array>

    <!--Queue fragment strings-->
    <string name="queue_header">Up Next</string>
    <string name="shuffle_button">Shuffle</string>

    <!--Sleep timer fragment strings-->
    <string name="sleep_timer_header">Sleep Timers</string>
    <string name="song_timer_header">Music</string>
    <string name="ambient_timer_header">Ambience</string>
    <string name="reset_label">Reset:</string>
    <string name="start_label">Start:</string>

    <string name="sleep_editor_header">Set Timers</string>
    <string name="remaining_label">Remaining:</string>
    <string name="preset_label">Preset Times:</string>
    <string name="fade_label">Fade Out:</string>
    <string name="duration_label">Duration:</string>
    <string name="fade_duration_label">Fade Duration:</string>

    <string name="timer_finished">Finished</string>
    <string name="start_error">Fade duration must not exceed timer duration.</string>"

    <!--Sleep timer chip presets-->
    <string name="chip_15">15</string>
    <string name="chip_30">30</string>
    <string name="chip_45">45</string>
    <string name="chip_60">60</string>
    <string name="chip_90">90</string>
    <string name="chip_custom">Custom</string>

    <string name="timer_select_label">Timer Target:</string>
    <string-array name="timer_options">
        <item>Music</item>
        <item>Ambience</item>
        <item>Both</item>
    </string-array>

    <!--Timer dialog picker-->
    <string name="hour_picker">Hours</string>
    <string name="minute_picker">Minutes</string>
    <string name="second_picker">Seconds</string>

    <!--Accessibility (cd - content desc) -->
    <string name="album_cover_cd">Album cover</string>
    <string name="song_sort_direction_cd">Direction of sorted list</string>
    <string name="ambient_disk_cover_cd">Ambient disk cover</string>
    <string name="ambient_disk_hole_cd">Ambient disk hole</string>
    <string name="ambient_pause_cd">Ambient disk paused</string>
    <string name="drag_handle_cd">Drag Handle</string>
    <string name="loop_button_cd">Loop Toggle</string>
    <string name="reset_icon_cd">Reset Icon</string>
    <string name="chevron_cd">Open Tab Icon</string>
    <string name="power_icon_cd">Power Icon</string>
    <string name="error_icon_cd">Error Icon</string>

</resources>